# bluenrg1-linux

./: .gitignore  CMakeLists.txt  README  stmBlueNRG-1.cmake
src/: BLE_Beacon_main.c  Beacon_config.h  syscalls.c
